assets/themes/the-minimum/css/style.css
/* ... */
/*
	Not that old computer layout 
*/
@media only screen and (min-width: 1280px) {
  .the-header .unit-inner {
    width: 60em;
  }
  .the-header .logo {
    width: 26.25em;
    float: left;
  }
  .the-header .nav-global {
    margin-top: 21px;
    text-align: right;
    width: 26.25em;
    float: right;
  }
  .unit-article .unit-head-inner,
  .unit-article .entry-content,
  .unit-article .misc-content,
  .unit-article .unit-foot-inner {
    width: 43.125em;
  }
  .unit-article .unit-foot .pagination {
    float: left;
    width: 37.5em;
  }
  .unit-article .unit-foot .gotop {
    float: right;
    margin-top: 0;
    text-align: right;
    width: 20.625em;
  }
  .layout-page .unit-body .unit-body-inner {
    width: 43.125em;
  }
  .layout-page .unit-body .article-list {
    width: 43.125em;
  }
  .layout-page .unit-body .article-list .meta {
    width: 20.625em;
  }
  .the-footer .unit-foot {
    width: 60em;
  }
}
/*
	Huge-screen layout 
*/
@media only screen and (min-width: 1410px) {
  .the-header .unit-inner {
    width: 88.125em;
  }
  .the-header .logo {
    width: 43.125em;
  }
  .the-header .nav-global {
    width: 43.125em;
  }
  .unit-article .unit-head-inner, .unit-article .entry-content, .unit-article .misc-content {
    width: 43.125em;
  }
  .unit-article .unit-foot-inner {
    width: 88.125em;
  }
  .unit-article .unit-foot .pagination {
    width: 54.375em;
  }
  .unit-article .unit-foot .gotop {
    padding-right: 360px;
    width: 9.375em;
  }
  .layout-page .unit-body .unit-body-inner {
    width: 43.125em;
  }
  .layout-page .unit-body .article-list {
    width: 43.125em;
  }
  .layout-page .unit-body .article-list .meta {
    width: 20.625em;
  }
  .the-footer .unit-foot {
    width: 88.125em;
  }
  .the-footer .unit-inner h1,
  .the-footer .unit-inner h2,
  .the-footer .unit-inner h3,
  .the-footer .unit-inner h4,
  .the-footer .unit-inner h5,
  .the-footer .unit-inner p,
  .the-footer .unit-inner ul,
  .the-footer .unit-inner ol,
  .the-footer .unit-inner dl,
  .the-footer .unit-inner blockquote {
    margin-left: 360px;
    margin-right: 360px;
  }
}

/* Added by AGS */

.pre {
    word-wrap: normal;
    white-space: pre;
    }

.pad-20 {
    padding: 20px;
}

.pad-40 {
    padding: 40px;
}

.pad-top-80 {
    padding-top: 80px;
}

.PostTitle {
    margin-bottom: 0px;
    line-height: 1.25;
}

.PostDate {
    margin-bottom: 52px;
}
text-center{text-align:center;}
.list-inline{padding-left:0;list-style:none}.list-inline>li{display:inline-block;padding-right:5px;padding-left:5px}.list-inline>li:first-child{padding-left:0}

